--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt-br">
     <head>
     	<title>Developer</title>
 
@@ -44,10 +44,10 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
                                     <li class="active"><a href="#header"><i class="fa fa-home"></i> <span>Home</span></a></li>
-                                    <li><a href="#portfolio"><i class="fa fa-bookmark"></i> Portfolio</a></li>
-                                    <li><a href="#services"><i class="fa fa-bullhorn"></i> Me</a></li>
-                                    <li><a href="#testimonials"><i class="fa fa-thumbs-up"></i> Tetimonials</a></li>
-                                    <li><a href="#contact"><i class="fa fa-phone-square"></i> Contact</a></li>
+                                    <li><a href="#portfolio"><i class="fa fa-bookmark"></i> Portfólio</a></li>
+                                    <li><a href="#services"><i class="fa fa-bullhorn"></i> Quem Sou Eu?</a></li>
+                                    <li><a href="#testimonials"><i class="fa fa-thumbs-up"></i> Comentários</a></li>
+                                    <li><a href="#contact"><i class="fa fa-phone-square"></i> Contato</a></li>
                                 </ul>
                             </div>  <!-- /.navbar-collapse -->
                         </nav>
@@ -56,12 +56,12 @@
                 
                 <div class="middle text-center clearfix">
                     <div class="container">
-                        <h1 class="pro-name">Web <!-- <span style="color: #71b644;" > -->Developer<!-- </span> --></h1>
-                        <p class="tagline">Bring your dreams to life</p>
+                        <h1 class="pro-name">Desenvolvedor <!-- <span style="color: #71b644;" > -->Web<!-- </span> --></h1>
+                        <p class="tagline">Seriedade, Competência e Responsabildade são os principios que regem o meu trabalho para atender suas perspectivas e torná-las em realidade!</p>
                         <div class="skills">
 
                         </div>  <!-- skills -->
-                        <a href="#contact" target="_blank" class="btn btn-lg btn-hire wow animated zoomIn">Hire Me</a>
+                        <a href="#contact" target="_blank" class="btn btn-lg btn-hire wow animated zoomIn">Estou Aqui!</a>
                     </div>  <!-- container -->
                 </div>  <!-- middle -->
                 
@@ -73,7 +73,7 @@
 
         <div class="content-block text-center" id="portfolio">
             <header class="block-heading cleafix">
-                <h1>Latest Works</h1>
+                <h1>Úlitmos Trabalhos</h1>
                 <!-- <p>Take a look at some of my recent products</p> -->
             </header>
 
@@ -82,7 +82,7 @@
                     <div class="effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work1.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos</span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -95,7 +95,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work2.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos</span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -108,7 +108,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work3.png">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos</span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -121,7 +121,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work7.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos </span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -134,7 +134,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work8.png">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos </span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -147,7 +147,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work4.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos </span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -160,7 +160,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work5.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos </span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -173,7 +173,7 @@
                     <div class="portfolio-item effect-zoe">
                         <img class="img-responsive" alt="Portfolio" src="img/work6.jpg">
                         <figcaption>
-                            <h2 class="hidden-xs">Creative <span>Joe</span></h2>
+                            <h2 class="hidden-xs">Projetos <span>Desenvolvidos </span></h2>
                             <p class="icon-links">
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
