--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-    	<title>Developer</title>
+    	<title>Desenvolvedor</title>
 
     	<!-- meta -->
         <meta charset="utf-8">
