--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
                 <i class="fa fa-eye"></i>
                 <span>View All</span>
             </a>
-        </div>  <!-- content-block -->
+        </div>  
+        
+        <!-- content-block -->
 
-       <!--  <div class="content-block text-center" id="services">
+       <div class="content-block text-center" id="services">
             <div class="overlay-2">
                         <header class="block-heading cleafix">
                             <h1>More About Me</h1>
