--- a/index.html
+++ b/index.html
@@ -219,8 +219,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>    overlay-2
-        </div>  --> <!-- content-block -->
+                    </div>
+        </div> 
+        
+        <!-- content-block -->
+        
         <div id="services" class="content-block">
             <div id="numbers" class="parallax">
                 <div class="overlay">
