--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="copyright">&copy; 2014 Developer</div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="designed-by">Designed By <a href="http://themewagon.com/" target="_blank">ThemeWagon</a></div>
+                        <div class="designed-by">Designed By <a href="http://themewagon.com/" >ThemeWagon</a></div>
                     </div>
                 </div>
             </div>
